# Pool_CPP

./: .gitignore  needed.cpp
CPP_00/ex00/: Makefile  megaphone.cpp
CPP_00/ex01/: Contact.cpp  Contact.hpp  Makefile  PhoneBook.cpp  PhoneBook.hpp  main.cpp
CPP_01/ex00/: Zombie.cpp  Zombie.hpp  main.cpp  newZombie.cpp  randomChump.cpp
CPP_01/ex01/: Makefile  Zombie.cpp  Zombie.hpp  main.cpp  zombieHorde.cpp
CPP_01/ex02/: Makefile  main.cpp
CPP_01/ex03/: HumanA.cpp  HumanA.hpp  HumanB.cpp  HumanB.hpp  Makefile  Weapon.cpp  Weapon.hpp  main.cpp
CPP_01/ex04/: Makefile  main.cpp
CPP_01/ex05/: Harl.cpp  Harl.hpp  Makefile  main.cpp
CPP_02/ex00/: Fixed.cpp  Fixed.hpp  Makefile  main.cpp
CPP_02/ex01/: Fixed.cpp  Fixed.hpp  Makefile  main.cpp
CPP_02/ex02/: Fixed.cpp  Fixed.hpp  Makefile  main.cpp
CPP_03/ex00/: ClapTrap.cpp  ClapTrap.hpp  Makefile  main.cpp
CPP_03/ex01/: ClapTrap.cpp  Makefile  main.cpp
CPP_03/ex02/: FragTrap.hpp  Makefile  ScavTrap.hpp  main.cpp
CPP_03/ex03/: ClapTrap.cpp  ClapTrap.hpp  (+8 more)
CPP_04/: CMakeLists.txt
CPP_04/ex00/: CMakeLists.txt
CPP_04/ex00/inc/: Animal.hpp  Cat.hpp  Dog.hpp  WrongAnimal.hpp  WrongCat.hpp
CPP_04/ex00/src/: Animal.cpp  Cat.cpp  Dog.cpp  WrongCat.cpp  main.cpp
CPP_04/ex01/: CMakeLists.txt  Polymorphism
CPP_04/ex01/inc/: Animal.hpp  Brain.hpp  Cat.hpp  Dog.hpp  WrongAnimal.hpp  WrongCat.hpp
CPP_04/ex01/src/: Cat.cpp  Dog.cpp  WrongAnimal.cpp  main.cpp
CPP_04/ex02/: CMakeLists.txt  Makefile
CPP_04/ex02/inc/: AAnimal.hpp  Brain.hpp  Cat.hpp  Dog.hpp
CPP_04/ex02/src/: AAnimal.cpp  Brain.cpp  Cat.cpp  Dog.cpp  main.cpp
CPP_05/ex01/: Bureaucrat.cpp  Bureaucrat.hpp  CMakeLists.txt  Form.cpp  Form.hpp  Makefile  main.cpp
CPP_06/: .gitignore
(+64 files in other folders)
